--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,15 +6,21 @@ on:
     branches: [ main ]
 jobs:
   build:
+    env:
+      CI: true
+    strategy:
+      matrix:
+        node-version: [16.X, 18.X, 20.X]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use node js version 18
+      - name: Use node js version ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
+      - run: npm test
 #  deploy:
 #    needs: build
 
