--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,7 +10,7 @@ jobs:
       CI: true
     strategy:
       matrix:
-        node-version: [16.X, 18.X, 20.X]
+        node-version: [18.X, 20.X]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
