--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "npm run watch --prefix server ",
     "client": "npm start --prefix client ",
     "deploy": "npm run build --prefix client && npm start --prefix server",
-    "test": "npm test --prefix server && npm test --prefix client"
+    "test": "npm test --prefix server"
   },
   "keywords": [],
   "author": "",
