--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run: npm install
       - run: npm run build --prefix client
-      - run: npm test
+      #- run: npm test
 #  deploy:
 #    needs: build
 
